<resources>
    <string name="app_name">万语词</string>
    <string name="accept">同意并进入</string>
    <string name="disagree">不同意</string>
    <string name="fragment_welcome_welcome">欢迎使用</string>
    <string name="fragment_user_information_user_agreement">用户服务协议</string>
    <string name="fragment_user_information_privacy_policy">用户隐私政策</string>
    <string name="user_name">userName</string>
    <string name="level_1">LV1</string>
    <string name="level_2">LV2</string>
    <string name="level_3">LV3</string>
    <string name="level_4">LV4</string>
    <string name="level_5">LV6</string>
    <string name="level_6">LV6</string>
    <string name="vip_level_1">暂未开通会员</string>
    <string name="vip_level_2">至尊会员</string>
    <string name="score">积分余额:</string>
    <string name="settings">设置</string>
    <string name="theme">主题</string>
    <string name="i_start">我的收藏</string>
    <string name="main">首页</string>
    <string name="recite">背诵</string>
    <string name="history">历史</string>
    <string name="hearing">听力</string>
    <string name="add_to_plan">添加背词计划</string>
    <string name="select_language_class">选择语种</string>
    <string name="divide">划分</string>
    <string name="start_lean">开始学习</string>
    <string name="get_answer">检查</string>
    <string name="rate">倍速</string>
    <string name="default_rate">1.0x</string>
    <string name="sign">标记</string>
    <string name="chameleon">变色龙</string>
    <string name="shuffle">按色打乱</string>
    <string name="section">区间重背</string>
    <string name="change_mode">模式更改</string>
    <string name="start">收藏夹</string>
    <string name="save_progress">保存进度</string>
    <string name="analysis_word">单词分析</string>
    <string name="source_word">单词英文</string>
    <string name="word_phonetics">单词音标</string>
    <string name="categorize_origin">分类来源:</string>
    <string name="adjective">adj.[形]</string>
    <string name="adverb">adv.[副]</string>
    <string name="verb">v.[动]</string>
    <string name="intransitive_verb">vi.[不及动]</string>
    <string name="transitive_verb">vt.[及动]</string>
    <string name="noun">n.[名]</string>
    <string name="conjunction">conj.[连]</string>
    <string name="pronoun">pron.[代词]</string>
    <string name="number">num.[数]</string>
    <string name="article">art.[冠]</string>
    <string name="preposition">prep.[介]</string>
    <string name="int_word">int.[语]</string>
    <string name="auxiliary">aux.[助]</string>
    <string name="example_sentence">例句:</string>
    <string name="phrase">介词短语与固定搭配:</string>
    <string name="distinguish">辨析:</string>
    <string name="loading">正在加载</string>
    <string name="jump_next">跳转单词</string>
    <string name="please_click_flag_change_chameleon">请点击右侧弹出的旗帜选择一个颜色作为单词跳转的筛选色!</string>
    <string name="please_click_another_flag">选择失败,原因:当前单词列表中没有任何一个单词的旗帜颜色与您所选择的变色龙颜色一致.已退出颜色选择模式.</string>
    <string name="min_value">最小值</string>
    <string name="max_value">最大值</string>
    <string name="wave_sign">~</string>
    <string name="listening_write_mode">听写</string>
    <string name="english_translation_chinese">英译中</string>
    <string name="chinese_translation_english">中译英</string>
    <string name="only_credit">纯背诵</string>
    <string name="crediting_word">当前单词:</string>
    <string name="show_word_origin">showWordOrigin</string>
    <string name="create_new_category">+创建一个新的分类</string>
    <string name="add_new_category">添加新的分类</string>
    <string name="delete">删除</string>
    <string name="edit">编辑</string>
    <string name="categorize_title">分类标题:</string>
    <string name="title">标题</string>
    <string name="default_name_rule">若内容为空则使用默认的名称生成规则</string>
    <string name="describe">描述信息(简短地描述该分类)</string>
    <string name="describe_message">描述信息</string>
    <string name="add_word">添加单词</string>
    <string name="zero">0</string>
    <string name="thousand">千</string>
    <string name="ten_thousand">万</string>
    <string name="none_vip">正式会员</string>
    <string name="vip">大会员</string>
    <string name="one_year_vip">年度大会员</string>
    <string name="ten_year_vip">十年大会员</string>
    <string name="one_thousand_vip">百年大会员</string>
    <string name="forever_vip">永久大会员</string>
    <string name="account_and_security">账号与安全</string>
    <string name="message_settings">通知设置</string>
    <string name="universal_settings">通用设置</string>
    <string name="personal_information_collect_list">个人信息收集清单</string>
    <string name="third_party_information_share_list">第三方信息共享清单</string>
    <string name="about_we">关于我们</string>
    <string name="logout">退出登陆</string>
    <string name="account_profile">账号资料</string>
    <string name="nickname">昵称</string>
    <string name="UUID">UUID</string>
    <string name="introduction">简介</string>
    <string name="introduction_hint">简单地介绍一下自已吧~</string>
    <string name="sex">性别</string>
    <string name="sex_hint">选择您的性别</string>
    <string name="birthday">生日</string>
    <string name="birthday_hint">选择生日</string>
    <string name="school">学校</string>
    <string name="school_hint">选择学校</string>
    <string name="qrcode">二维码名片</string>
    <string name="hearing_practice">听力训练</string>
    <string name="recent_play">最近播放</string>
    <string name="offline_cache">离线缓存</string>
    <string name="start_list">收藏列表</string>
    <string name="error_add_hint">添加失败!当前未选择单词</string>
    <string name="quick_query_word">单词速查</string>
    <string name="classic">经典格式</string>
    <string name="orderly">有序</string>
    <string name="disorder">无序</string>
    <string name="lexicographic_order">字典序</string>
    <string name="word">单词</string>
    <string name="concise_phrase">介词短语</string>
    <string name="select_count">选词量:</string>
    <string name="credit_mode">背诵模式:</string>
    <string name="credit_mode_hint">不同的背诵模式会产生不同的效果,进入背词页面后可自由更改.</string>
    <string name="credit_order">背诵顺序</string>
    <string name="credit_order_hint">有序:背诵时按照单词在划分中的顺序背诵\n无序:随机打乱当前选择的单词进行背诵\n字典序:按照字典的顺序排列单词后背诵</string>
    <string name="credit_filter">背诵过滤:</string>
    <string name="credit_content_hint">单词:正常背诵所有单词\n介词短语:会自动筛选出包含介词短语的单词,其余单词不会被纳入背诵列表</string>
    <string name="credit_format">背诵格式:</string>
    <string name="association">联想模式</string>
    <string name="credit_format_hint_association">联想模式:单词不再标序号,想到什么就输入什么</string>
    <string name="credit_format_hint_classic">经典模式:正常背诵单词</string>
    <string name="save_settings">保存设置</string>
    <string name="restore_default">恢复默认</string>
    <string name="next_crediting_ignore">下次背诵时跳过设置</string>
    <string name="next_crediting_ignore_hint"><![CDATA[下次背诵单词时将自动使用当前保存的配置,不再进入设置界面.您可以在\'设置\'->\"\"中进行修改]]></string>
    <string name="style">风格</string>
    <string name="login_app_account">登陆《万语词》账号</string>
    <string name="fragment_login_account_input_hint">Email地址/用户名</string>
    <string name="fragment_login_password_input_hint">密码</string>
    <string name="registry_account">注册账号</string>
    <string name="forget_password">忘记密码?</string>
    <string name="already_privacy_policy">我已阅读并同意《用户隐私保护政策》</string>
    <string name="login">登陆</string>
    <string name="user_another_account">使用其它账号登陆</string>
    <string name="wechat">微信</string>
    <string name="qq">QQ</string>
    <string name="create_app_account">创建《万语词》学习账号</string>
    <string name="create_account">注册账号</string>
    <string name="register">注册</string>
    <string name="login_account">登陆账号</string>
    <string name="fail_equal">未找到该单词</string>
    <string name="add_watch">+关注</string>
    <string name="send_some_comment">讲两句?</string>
    <string name="comment">评论 12138</string>
    <string name="popular_comment">热门评论</string>
    <string name="order_by_popular">按热度</string>
    <string name="comment0">我建议所有骂过时代少年团的人来看一下在我们家蹭热度的这个粉,这一条视频.首先你说马嘉祺不配,你知道吗,马嘉祺是小气球是,马嘉祺是小气球爆米花们的光</string>
    <string name="comment1">蔡徐坤,陈立农,范丞丞,黄明昊,林彦俊,朱正廷,王子异,王玲凯,尤长靖.\nnine percent.\n蔡徐坤容颜赏心悦目是IKUN信仰.\n陈立农笑容有感染力是农糖希望.\n丞星闪耀给范丞丞照亮前行方向.</string>
    <string name="comment2">你们是不是人啊，道歉会不会，你们黑粉黑他黑的那么爽，骂他骂的那么爽，真相到来那一天没有任何一个人给他道歉!荔枝，你要我拿什么荔枝，我爱的那个他都已经被你们这样对待了，你还要我怎么荔枝。难道看着他被你们骂黑我坐视不管这就叫荔枝了吗？沸羊羊我讨厌你!\n阿里嘎多美羊羊桑\n</string>
    <string name="open">展开</string>
    <string name="fold">收起</string>
    <string name="post">文章</string>
    <string name="word_divide">单词划分</string>
    <string name="word_star">单词收藏</string>
    <string name="create_author">创建者:</string>
    <string name="private_start">私密</string>
    <string name="create_date">创建日期:</string>
    <string name="please_read_policy">请先阅读《用户隐私保护政策》</string>
    <string name="login_success">登陆成功</string>
    <string name="language_class">语种</string>
    <string name="point">·</string>
    <string name="divide_element_count">element_count</string>
    <string name="next">下一个</string>
    <string name="previous">上一个</string>
    <string name="question">例题:</string>
    <string name="question_explain">例题解析:</string>
    <string name="right_index">正确答案:</string>
    <string name="choice_index">选项编号:</string>
    <string name="choice_value">选项值:</string>
    <string name="save_success">保存成功!</string>


    <!--所有扣模板的,通用的内容存放在这下面-->
    <string name="template_title">title</string>
    <string name="uk_phonetic">[英]</string>
    <string name="default_value">default</string>
    <string name="sentence_translation">例句翻译:</string>
    <string name="phrase_translation">介词短语翻译:</string>
    <string name="describe_english">字典解释:</string>
    <string name="picture">图片:</string>
    <string name="real_exam_sentence">真题例句:</string>
    <string name="source_paper">第几套:</string>
    <string name="source_level">出自:</string>
    <string name="source_year">年份:</string>
    <string name="source_type">题型:</string>
    <string name="remember_method">巧记:</string>
    <string name="syno_pos">联想词词性:</string>
    <string name="syno_translation">联想词翻译:</string>
    <string name="syno_word">联想词:</string>
    <string name="syno_word_id">联想词id:</string>
    <string name="rel_pos">同根词词性:</string>
    <string name="rel_word">同根词:</string>
    <string name="rel_word_translation">同根词翻译:</string>
    <string name="rel_word_id">同根词id</string>
    <string name="university">学校A</string>
    <string name="search_post">搜索帖子</string>
    <string name="search_word">搜索单词</string>
    <string name="word_translation">单词翻译</string>


</resources>