<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group >
        <item

            android:id="@+id/fragment_main_bottom_main"
            android:title="@string/listening_write_mode" />
        <item
            android:id="@+id/fragment_main_bottom_recite"
            android:title="@string/english_translation_chinese" />
        <item
            android:id="@+id/fragment_main_bottom_hearing"
            android:title="@string/chinese_translation_english" />
        <item
            android:id="@+id/fragment_main_bottom_analysis"
            android:title="@string/only_credit" />
    </group>
</menu>