<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="5dp"
        android:text="@string/add_new_category"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:text="@string/categorize_title"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/fragment_word_credit_start_new_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="title"
        android:hint="@string/title"
        android:inputType="text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:text="@string/describe"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/fragment_word_credit_start_new_describe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="title"
        android:hint="@string/describe_message"
        android:inputType="text" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/fragment_word_credit_start_edit_new_dialog_default_name_rule"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:src="@drawable/ic_doubt" />

        <TextView
            android:id="@+id/fragment_word_credit_start_edit_new_dialog_default_name_rule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/default_name_rule"
            android:textSize="16sp" />
    </RelativeLayout>
</LinearLayout>