<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group
        android:id="@+id/fragment_main_bottom_group"
        android:checkableBehavior="none">
        <item
            android:id="@+id/fragment_main_bottom_recite"
            android:icon="@drawable/credit"
            android:title="@string/recite" />
        <item
            android:id="@+id/fragment_main_bottom_hearing"
            android:icon="@drawable/hearing"
            android:title="@string/hearing" />
        <item
            android:id="@+id/fragment_main_bottom_analysis"
            android:icon="@drawable/analysis"
            android:title="@string/history" />
    </group>
</menu>