<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.fragment.LoginFragment">

    <include
        android:id="@+id/include"
        layout="@layout/global_back_toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/include">

        <ImageView
            android:id="@+id/fragment_login_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/fragment_login_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fragment_login_icon"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/login_app_account"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/fragment_login_account_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fragment_login_hint"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:hint="@string/fragment_login_account_input_hint"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/fragment_login_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fragment_login_account_input"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:hint="@string/fragment_login_password_input_hint"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/fragment_login_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fragment_login_password_input"
            android:layout_marginTop="30dp"
            android:text="@string/forget_password"
            android:textColor="@color/blue"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/fragment_login_create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fragment_login_password_input"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="30dp"
            android:text="@string/registry_account"
            android:textColor="@color/theme_color"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/fragment_login_read_policy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fragment_login_create_account"
            android:layout_marginTop="15dp"
            android:text="@string/already_privacy_policy" />

        <TextView
            android:id="@+id/fragment_login_login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/fragment_login_read_policy"
            android:layout_marginTop="15dp"
            android:background="@drawable/welcome_accept_button"
            android:backgroundTint="@color/light_theme_color_90"
            android:clickable="false"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@+id/fragment_login_login"
            android:layout_marginTop="15dp">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/dark_gray" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/user_another_account"
                android:textColor="@color/dark_gray" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/dark_gray" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/fragment_login_login_wechat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fragment_login_login"
            android:layout_marginStart="50dp"
            android:layout_marginTop="70dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_wechat_icon"
                app:tint="@color/green" />

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/wechat" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragment_login_login_qq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fragment_login_login"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="50dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_qq_icon"
                app:tint="@color/blue" />

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/qq" />
        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>