<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.settings.AccountProfileFragment">

    <include
        android:id="@+id/include"
        layout="@layout/global_back_toolbar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        app:layout_constraintTop_toBottomOf="@+id/include">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.utils.widget.ImageFilterView
                    android:id="@+id/fragment_account_profile_user_face"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/post_cover2"
                    app:round="64dp" />

                <androidx.constraintlayout.utils.widget.ImageFilterView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_alignBottom="@id/fragment_account_profile_user_face"
                    android:layout_marginStart="-20dp"
                    android:layout_toEndOf="@id/fragment_account_profile_user_face"
                    android:background="@color/black"
                    android:src="@android:drawable/ic_menu_camera"
                    app:round="64dp" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:divider="@drawable/divider_margin_bottom_16dp"
                android:orientation="vertical"
                android:showDividers="middle">

                <LinearLayout style="@style/settings_linear_layout">

                    <RelativeLayout style="@style/settings_relate_layout">

                        <TextView
                            style="@style/settings_profile_text_view"
                            android:text="@string/nickname" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true">

                            <EditText
                                android:id="@+id/fragment_account_user_name"
                                style="@style/settings_profile_hint_text_view"
                                android:text="@string/user_name" />

                            <ImageView style="@style/settings_image_view" />
                        </LinearLayout>
                    </RelativeLayout>


                    <RelativeLayout style="@style/settings_relate_layout">

                        <TextView
                            style="@style/settings_profile_text_view"
                            android:text="@string/introduction" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true">

                            <EditText
                                android:id="@+id/fragment_account_describe_info"
                                style="@style/settings_profile_hint_text_view"
                                android:hint="@string/introduction_hint" />

                            <ImageView style="@style/settings_image_view" />
                        </LinearLayout>
                    </RelativeLayout>

                    <RelativeLayout style="@style/settings_relate_layout">

                        <TextView
                            style="@style/settings_profile_text_view"
                            android:text="@string/sex" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true">

                            <TextView
                                android:id="@+id/fragment_account_sex"
                                style="@style/settings_profile_hint_text_view"
                                android:hint="@string/sex_hint" />

                            <ImageView style="@style/settings_image_view" />
                        </LinearLayout>
                    </RelativeLayout>

                    <RelativeLayout style="@style/settings_relate_layout">

                        <TextView
                            style="@style/settings_profile_text_view"
                            android:text="@string/birthday" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true">

                            <TextView
                                android:id="@+id/fragment_account_birthday"
                                style="@style/settings_profile_hint_text_view"
                                android:hint="@string/birthday_hint" />

                            <ImageView style="@style/settings_image_view" />
                        </LinearLayout>
                    </RelativeLayout>

                    <RelativeLayout style="@style/settings_relate_layout">

                        <TextView
                            style="@style/settings_profile_text_view"
                            android:text="@string/school" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true">

                            <EditText
                                android:id="@+id/fragment_account_university"
                                style="@style/settings_profile_hint_text_view"
                                android:hint="@string/school_hint" />

                            <ImageView android:id="@+id/fragment_account_university_button"
                                style="@style/settings_image_view" />
                        </LinearLayout>
                    </RelativeLayout>


                </LinearLayout>

                <LinearLayout style="@style/settings_linear_layout">

                    <RelativeLayout style="@style/settings_relate_layout">

                        <TextView
                            style="@style/settings_profile_text_view"
                            android:text="@string/UUID" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="20dp">

                            <TextView
                                android:id="@+id/fragment_account_uuid"
                                style="@style/settings_profile_hint_text_view"
                                android:text="@string/user_name" />

                        </LinearLayout>
                    </RelativeLayout>

                    <RelativeLayout style="@style/settings_relate_layout">

                        <TextView
                            style="@style/settings_profile_text_view"
                            android:text="@string/qrcode" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true">

                            <ImageView
                                android:layout_width="32dp"
                                android:layout_height="32dp"
                                android:layout_marginEnd="5dp"
                                android:src="@drawable/qrcode" />

                            <ImageView style="@style/settings_image_view" />
                        </LinearLayout>
                    </RelativeLayout>
                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>