<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.fragment.CreateAccountFragment">

    <include
        android:id="@+id/include"
        layout="@layout/global_back_toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/include">

        <ImageView
            android:id="@+id/fragment_create_account_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/fragment_create_account_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fragment_create_account_icon"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/create_app_account"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/fragment_create_account_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fragment_create_account_hint"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:hint="@string/fragment_login_account_input_hint"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/fragment_create_account_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fragment_create_account_input"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:hint="@string/fragment_login_password_input_hint"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/fragment_create_account_read_policy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fragment_create_account_password_input"
            android:layout_marginTop="8dp"
            android:text="@string/already_privacy_policy" />

        <TextView
            android:id="@+id/fragment_create_account_create"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/fragment_create_account_read_policy"
            android:layout_marginTop="15dp"
            android:background="@drawable/welcome_accept_button"
            android:backgroundTint="@color/light_theme_color_90"
            android:clickable="false"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="18sp" />


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>